# LibraryCLI

./: CMakeLists.txt
Headers/: Connection.hpp  Handler.h  HttpReply.hpp  HttpRequest.h  Session.h
Headers/Events/: AddBook.h  DeleteBook.h  EnterLibrary.h  Event.h  Events.h  Exit.h  GetBook.h  GetBooks.h  Login.h  Logout.h  Register.h
Sources/: Handler.cpp  HttpRequest.cpp  Session.cpp  main.cpp
Sources/Events/: AddBook.cpp  DeleteBook.cpp  EnterLibrary.cpp  Exit.cpp  GetBook.cpp  GetBooks.cpp  Login.cpp  Logout.cpp  Register.cpp
